List rows in app settings pages are ambiguous
Testing gnome-control-center main today (46 development cycle), each app settings page contains two lists, but those lists don't have headings, so it's not immediately clear what you are looking at:
The latest designs add headings for the lists - "Permissions" and "General" - which makes the page generally clearer. This will in particular make it more obvious when an app has few permissions granted.
Making this change would require moving the Required Permissions row to its own list, so that it can be grouped with the other permissions list.