apps: Separate the "Required Permissions" row into its own section

The "Required Permissions" row is located at its own
AdwPreferencesGroup in the latest mockups:

https://gitlab.gnome.org/Teams/Design/settings-mockups/-/commit/d609252cdecc8aa3f8b39087bd0f6c26d59b3c10

Partially fixes https://gitlab.gnome.org/GNOME/gnome-control-center/-/issues/2829